--- a/Config.xcconfig
+++ b/Config.xcconfig
@@ -1,6 +1,6 @@
-DEVELOPMENT_TEAM = A8XWAF2UFT
+DEVELOPMENT_TEAM = AKBT3V7DRV
 
-APP_ID = com.Arror.Mango
+APP_ID = fun.zwang.mango
 
 TUNNEL_BUNDLE_SUFFIX_XRAY = XrayTunnel
 
